Mon Feb  6 15:01:55 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0): should pass block to enumerators.  patched
	  by Kazuki Tsujimoto.  [ruby-dev:44961][Bug #5731]

	* vm_eval.c (method_missing), vm_insnhelper.c (vm_call_method):
	  ditto.  patched by satoshi shiba.

Mon Feb  6 21:52:20 2012  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (INSTRUBY_ARGS): added --mantype to apply mdoc2man.rb
	  to man pages.  Fixes #5598. 
	  (do-install-nodoc, do-install-local, do-install-man,
	  dont-install-nodoc, dont-install-local, dont-install-man):
	  No longer needs --mantype.
	
	  Reported by Rainer Orth <ro AT cebitec.uni-bielefeld.de>,
	  patch by George Koehler <xkernigh AT netscape.net>.

Mon Feb  6 21:21:46 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/unit/assertions.rb (MINI_DIR): quick dirty hack to get rid of
	  warnings when using assert/assert_respond_to.

Mon Feb  6 20:38:19 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): reset coderange after expanding path.

Mon Feb  6 20:32:17 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strptime.c: moved detector of leftover.

Mon Feb  6 20:32:17 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c: [ruby-core:42173].

Mon Feb  6 20:31:35 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: uses to_integer instead.
	* test/date/test_switch_hitter.rb: added a test.

Mon Feb  6 20:31:35 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (wholenum): fix the type of the return value.

Mon Feb  6 20:31:35 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c:  [ruby-dev:45008].

Mon Feb  6 16:38:56 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (unixtime_to_filetime): should check the return value
	  of localtime().  reported by snowjail at gmail.com.
	  [ruby-dev:44838] [Bug #5596]

Mon Feb  6 16:36:25 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
